--- a/tmpl/lotto.html
+++ b/tmpl/lotto.html
@@ -10,6 +10,8 @@
   <h1>generated EuroLotto Numbers</h1>
   <!--div>{{printf "%s" .Body}}</div-->
   <div>{{.Body | safeHTML}}</div>
+  <br>
+  <div><input type="button" value="Home" onclick="location.href='/';" /></div>
 </body>
 
 </html>
