--- a/tmpl/index.html
+++ b/tmpl/index.html
@@ -13,7 +13,7 @@
   <div>{{.Body | safeHTML}}</div>
   <br>
   <div>
-    <table style="width:60%">
+    <table class="center">
       <tr>
         <th>handler paths</th>
         <th>comment</th>
